--- a/XMLIdioma/PruebaIdioma/LANGUAGES/XMLIdioma.Messages.eng.xml
+++ b/XMLIdioma/PruebaIdioma/LANGUAGES/XMLIdioma.Messages.eng.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Messages>
-  <SALUDOS>
-    Greetings from %0% from %1%
-  </SALUDOS>
+	<SALUDOS>
+		Greetings from %0% from %1%
+	</SALUDOS>
+	<ASKFOREXIT>
+		Do you really want to exit the application?\n\tIf you exit now, you can return later.
+	</ASKFOREXIT>
+	<ErrMsg> 
+		Error %0% (%1%) in procedure %2% '%3%' of %4% %5% \n [%6%]
+	</ErrMsg>
+	<ErrErlMsg> 
+		Error %0% (%1%) in procedure %2% '%3%' of %4% %5% in line %7% \n [%6%]
+	</ErrErlMsg>
+	<IncorrectDates>
+		The start date of %0% cannot be later than the end date.
+	</IncorrectDates>
 </Messages>
